# esp32-agui

./: .gitignore  CLAUDE.md  README.md
agui-voice/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
agui-voice/components/agui_client/: CMakeLists.txt  agui_client.c  agui_client.cpp  esp_http_service.cpp  esp_http_service.h
agui-voice/components/agui_client/include/: agui_client.h
agui-voice/components/agui_sdk/: CMakeLists.txt  PATCHES.md  idf_component.yml
agui-voice/components/agui_sdk/src/agent/: http_agent.cpp  http_agent.h
agui-voice/components/agui_sdk/src/core/: event.cpp  event.h  session_types.cpp  session_types.h  subscriber.cpp  subscriber.h  uuid.cpp
agui-voice/components/agui_sdk/test/: run_host_tests.sh  test_extensions.cpp
agui-voice/components/alarm_img/: CMakeLists.txt  alarm_img.c
agui-voice/components/alarm_img/include/: alarm_img.h
agui-voice/components/app_cfg/: CMakeLists.txt  app_cfg.c
agui-voice/components/app_cfg/include/: app_cfg.h
agui-voice/components/board_variant/: CMakeLists.txt  board_variant.c
agui-voice/components/board_variant/include/: board_variant.h
agui-voice/components/chat_ui/: CMakeLists.txt  chat_ui.c
agui-voice/components/chat_ui/include/: chat_ui.h
agui-voice/components/device_tools/: CMakeLists.txt  device_tools.c
agui-voice/components/device_tools/include/: device_tools.h
agui-voice/components/esp32_s3_touch_amoled_1_8/: CMakeLists.txt  README.md  esp32_s3_touch_amoled_1_8.c  idf_component.yml
agui-voice/components/esp32_s3_touch_amoled_1_8/include/bsp/: display.h  esp32_s3_touch_amoled_1_8.h
agui-voice/components/esp_lcd_sh8601/: CMakeLists.txt
agui-voice/components/espressif__esp_lcd_co5300/: CMakeLists.txt
agui-voice/components/espressif__esp_lcd_panel_io_additions/: CMakeLists.txt
agui-voice/components/espressif__esp_lcd_touch/: esp_lcd_touch.c
agui-voice/components/espressif__esp_lcd_touch/include/: esp_lcd_touch.h
agui-voice/components/espressif__esp_lcd_touch_cst816s/: CMakeLists.txt
agui-voice/components/net_prov/: CMakeLists.txt  net_prov.c  net_prov_internal.h  portal.c  tz_options.h
agui-voice/components/net_prov/include/: net_prov.h
agui-voice/components/soniox_client/: CMakeLists.txt  soniox_client.c
agui-voice/components/soniox_client/include/: soniox_client.h
agui-voice/components/soniox_tts_client/: CMakeLists.txt  soniox_tts_client.c
agui-voice/components/soniox_tts_client/include/: soniox_tts_client.h
agui-voice/main/: CMakeLists.txt  agui_voice_main.c  idf_component.yml
docs/: agui-voice-plan.md  flashing.md  soniox-rt-protocol.md
